--- a/index.html
+++ b/index.html
@@ -6,63 +6,162 @@
   <title>Malla Interactiva Medicina USS</title>
   <link rel="stylesheet" href="estilos.css" />
   <style>
-    /* Estilo mínimo por si estilos.css no carga */
+    *, *::before, *::after {
+      box-sizing: border-box;
+    }
+
     body {
-      font-family: sans-serif;
-      margin: 0;
-      padding: 1rem;
+      font-family: Arial, sans-serif;
       background-color: #ffffff;
+      margin: 0;
+      padding: 20px;
+      color: #333;
     }
 
     h1 {
       text-align: center;
-      margin-bottom: 1rem;
+      margin-bottom: 40px;
+      font-size: 2rem;
+      color: #222;
     }
 
     .linea-tiempo {
       display: flex;
+      gap: 30px;
       overflow-x: auto;
-      gap: 1rem;
-      padding: 1rem;
+      padding: 10px 0;
+      scroll-behavior: smooth;
     }
 
     .semestre {
-      min-width: 250px;
-      background: #ffffff;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      padding: 0.5rem;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      flex: 0 0 260px;
+      display: flex;
+      flex-direction: column;
+      border-radius: 10px;
+      padding: 12px;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+      min-height: 350px;
+      transition: transform 0.3s ease;
+    }
+
+    .semestre:hover {
+      transform: scale(1.01);
+    }
+
+    .semestre-1, .semestre-2, .semestre-3, .semestre-4 {
+      background-color: #E8EDEB;
+    }
+
+    .semestre-5, .semestre-6, .semestre-7, .semestre-8,
+    .semestre-9, .semestre-10 {
+      background-color: #EEF7FD;
+    }
+
+    .semestre-11, .semestre-12, .semestre-13, .semestre-14 {
+      background-color: #ECF3E9;
     }
 
     .semestre h3 {
+      margin: -12px -12px 12px -12px;
+      padding: 10px;
       text-align: center;
-      margin-top: 0;
+      font-size: 1.1rem;
+      font-weight: bold;
+      border-radius: 10px 10px 0 0;
+      color: inherit;
+      background-color: inherit;
+      border-bottom: 2px solid rgba(0, 0, 0, 0.1);
     }
 
     .ramo {
-      background-color: #eee;
-      padding: 0.5rem;
-      margin: 0.3rem 0;
-      border-radius: 4px;
-      font-size: 0.9rem;
+      background-color: #fff;
+      border: 2px solid transparent;
+      padding: 10px;
+      margin-bottom: 8px;
+      border-radius: 6px;
+      font-size: 0.88rem;
+      font-weight: bold;
+      text-align: center;
       cursor: pointer;
+      user-select: none;
+      transition: all 0.2s ease-in-out;
+      box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+      position: relative;
+      overflow: hidden;
     }
 
     .ramo.bloqueado {
-      background-color: #ccc;
+      opacity: 0.4;
       cursor: not-allowed;
+      pointer-events: none;
+    }
+
+    .ramo.activo {
+      cursor: pointer;
     }
 
     .ramo.aprobado {
-      background-color: #a5d6a7;
-      text-decoration: line-through;
-      opacity: 0.6;
+      position: relative;
     }
 
-    .ramo.basico { border-left: 5px solid #2196f3; }
-    .ramo.intermedio { border-left: 5px solid #ff9800; }
-    .ramo.avanzado { border-left: 5px solid #4caf50; }
+    .ramo.aprobado::after {
+      content: "";
+      position: absolute;
+      top: 50%;
+      left: 0;
+      width: 100%;
+      height: 2px;
+      background-color: rgba(0, 0, 0, 0.4);
+      transform: rotate(-45deg);
+      transform-origin: center;
+      pointer-events: none;
+    }
+
+    .ramo.aprobado.basico {
+      background-color: #c4d4d1;
+      color: #00483d;
+      border-color: #00483d;
+    }
+
+    .ramo.aprobado.intermedio {
+      background-color: #cce7f4;
+      color: #0078a4;
+      border-color: #0078a4;
+    }
+
+    .ramo.aprobado.avanzado {
+      background-color: #d4e6cc;
+      color: #4e8645;
+      border-color: #4e8645;
+    }
+
+    .ramo.basico {
+      border-color: #006957;
+      background-color: #E8EDEB;
+      color: #006957;
+    }
+
+    .ramo.intermedio {
+      border-color: #00A9DC;
+      background-color: #EEF7FD;
+      color: #00A9DC;
+    }
+
+    .ramo.avanzado {
+      border-color: #6FB065;
+      background-color: #ECF3E9;
+      color: #6FB065;
+    }
+
+    @media (max-width: 1200px) {
+      .linea-tiempo {
+        overflow-x: auto;
+      }
+
+      .semestre {
+        min-width: 220px;
+      }
+    }
   </style>
 </head>
 <body>
@@ -73,8 +172,7 @@
     <!-- Los semestres se insertan dinámicamente aquí -->
   </div>
 
-  
-  <!-- CARGA DE SCRIPT -->
+  <!-- CARGA DE SCRIPTS -->
   <script src="ramos.js"></script>
   <script src="script.js"></script>
 </body>
