--- a/index.html
+++ b/index.html
@@ -172,6 +172,10 @@
     <!-- Los semestres se insertan dinámicamente aquí -->
   </div>
 
+<div id="estadisticas" style="text-align:center; margin-top: 30px; font-weight: bold;">
+  Ramos aprobados: 0 / 0 (0%)
+</div>
+
   <!-- CARGA DE SCRIPTS -->
   <script src="ramos.js"></script>
   <script src="script.js"></script>
