--- a/index.html
+++ b/index.html
@@ -172,8 +172,30 @@
     <!-- Los semestres se insertan dinámicamente aquí -->
   </div>
 
-<div id="estadisticas" style="text-align:center; margin-top: 30px; font-weight: bold;">
-  Ramos aprobados: 0 / 0 (0%)
+<div style="text-align: center; margin-top: 30px;">
+  <button id="btnReiniciar" style="padding: 10px 20px; background-color: #d32f2f; color: white; border: none; border-radius: 6px; font-weight: bold; cursor: pointer;">
+    Reiniciar malla
+  </button>
+</div>
+
+<!-- Tabla de avance curricular -->
+<div id="avance" style="margin-top: 40px; display: flex; justify-content: center;">
+  <table style="border-collapse: collapse; border: 1px solid #ccc; font-family: Arial, sans-serif; font-size: 0.95rem;">
+    <thead>
+      <tr style="background-color: #f5f5f5;">
+        <th style="padding: 10px 16px; border: 1px solid #ccc;">Total de Ramos</th>
+        <th style="padding: 10px 16px; border: 1px solid #ccc;">Ramos Aprobados</th>
+        <th style="padding: 10px 16px; border: 1px solid #ccc;">Avance (%)</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td id="total-ramos" style="padding: 10px 16px; border: 1px solid #ccc;">—</td>
+        <td id="ramos-aprobados" style="padding: 10px 16px; border: 1px solid #ccc;">—</td>
+        <td id="porcentaje-avance" style="padding: 10px 16px; border: 1px solid #ccc;">—%</td>
+      </tr>
+    </tbody>
+  </table>
 </div>
 
   <!-- CARGA DE SCRIPTS -->
