--- a/index.html
+++ b/index.html
@@ -198,6 +198,9 @@
   </table>
 </div>
 
+<!-- Librería para confeti -->
+<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+
   <!-- CARGA DE SCRIPTS -->
   <script src="ramos.js"></script>
   <script src="script.js"></script>
