--- a/index.html
+++ b/index.html
@@ -201,6 +201,12 @@
 <!-- Librería para confeti -->
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 
+<div style="text-align: center; margin-top: 20px;">
+  <button id="toggleTheme" style="padding: 10px 20px; background-color: #333; color: white; border: none; border-radius: 6px; font-weight: bold; cursor: pointer;">
+    Cambiar tema
+  </button>
+</div>
+
   <!-- CARGA DE SCRIPTS -->
   <script src="ramos.js"></script>
   <script src="script.js"></script>
