--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Malla Interactiva Medicina USS</title>
+  <title>Malla Interactiva Medicina UC</title>
   <link rel="stylesheet" href="estilos.css" />
   <style>
     *, *::before, *::after {
@@ -12,7 +12,7 @@
 
     body {
       font-family: Arial, sans-serif;
-      background-color: #ffffff;
+      background-color: #f0f0f0; /* fondo gris uniforme para todos los semestres */
       margin: 0;
       padding: 20px;
       color: #333;
@@ -41,24 +41,12 @@
       padding: 12px;
       box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
       min-height: 350px;
+      background-color: #d3d3d3; /* gris uniforme para todos los semestres */
       transition: transform 0.3s ease;
     }
 
     .semestre:hover {
       transform: scale(1.01);
-    }
-
-    .semestre-1, .semestre-2, .semestre-3, .semestre-4 {
-      background-color: #E8EDEB;
-    }
-
-    .semestre-5, .semestre-6, .semestre-7, .semestre-8,
-    .semestre-9, .semestre-10 {
-      background-color: #EEF7FD;
-    }
-
-    .semestre-11, .semestre-12, .semestre-13, .semestre-14 {
-      background-color: #ECF3E9;
     }
 
     .semestre h3 {
@@ -68,8 +56,8 @@
       font-size: 1.1rem;
       font-weight: bold;
       border-radius: 10px 10px 0 0;
-      color: inherit;
-      background-color: inherit;
+      color: #222;
+      background-color: #d3d3d3;
       border-bottom: 2px solid rgba(0, 0, 0, 0.1);
     }
 
@@ -90,6 +78,7 @@
       overflow: hidden;
     }
 
+    /* Estados */
     .ramo.bloqueado {
       opacity: 0.4;
       cursor: not-allowed;
@@ -117,42 +106,28 @@
       pointer-events: none;
     }
 
-    .ramo.aprobado.basico {
-      background-color: #c4d4d1;
-      color: #00483d;
-      border-color: #00483d;
+    /* Colores por tipo de ramo */
+    .ramo.normal {
+      border-color: #0176DE;
+      background-color: #cce0ff;
+      color: #014a8a;
     }
 
-    .ramo.aprobado.intermedio {
-      background-color: #cce7f4;
-      color: #0078a4;
-      border-color: #0078a4;
+    .ramo.internado {
+      border-color: #16379B;
+      background-color: #a0b1e3;
+      color: #0b1f52;
     }
 
-    .ramo.aprobado.avanzado {
-      background-color: #d4e6cc;
-      color: #4e8645;
-      border-color: #4e8645;
+    .ramo.ofg,
+    .ramo.antropologico,
+    .ramo.teologico {
+      border-color: #FECC00;
+      background-color: #fff5b1;
+      color: #665800;
     }
 
-    .ramo.basico {
-      border-color: #006957;
-      background-color: #E8EDEB;
-      color: #006957;
-    }
-
-    .ramo.intermedio {
-      border-color: #00A9DC;
-      background-color: #EEF7FD;
-      color: #00A9DC;
-    }
-
-    .ramo.avanzado {
-      border-color: #6FB065;
-      background-color: #ECF3E9;
-      color: #6FB065;
-    }
-
+    /* Responsive */
     @media (max-width: 1200px) {
       .linea-tiempo {
         overflow-x: auto;
@@ -165,49 +140,49 @@
   </style>
 </head>
 <body>
-  <h1>Malla Interactiva Medicina USS</h1>
+  <h1>Malla Interactiva Medicina UC</h1>
 
-  <!-- CONTENEDOR PRINCIPAL DE LA MALLA -->
+  <!-- Contenedor principal de la malla -->
   <div class="linea-tiempo">
     <!-- Los semestres se insertan dinámicamente aquí -->
   </div>
 
-<div style="text-align: center; margin-top: 30px;">
-  <button id="btnReiniciar" style="padding: 10px 20px; background-color: #d32f2f; color: white; border: none; border-radius: 6px; font-weight: bold; cursor: pointer;">
-    Reiniciar malla
-  </button>
-</div>
+  <div style="text-align: center; margin-top: 30px;">
+    <button id="btnReiniciar" style="padding: 10px 20px; background-color: #d32f2f; color: white; border: none; border-radius: 6px; font-weight: bold; cursor: pointer;">
+      Reiniciar malla
+    </button>
+  </div>
 
-<!-- Tabla de avance curricular -->
-<div id="avance" style="margin-top: 40px; display: flex; justify-content: center;">
-  <table style="border-collapse: collapse; border: 1px solid #ccc; font-family: Arial, sans-serif; font-size: 0.95rem;">
-    <thead>
-      <tr style="background-color: #f5f5f5;">
-        <th style="padding: 10px 16px; border: 1px solid #ccc;">Total de Ramos</th>
-        <th style="padding: 10px 16px; border: 1px solid #ccc;">Ramos Aprobados</th>
-        <th style="padding: 10px 16px; border: 1px solid #ccc;">Avance (%)</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td id="total-ramos" style="padding: 10px 16px; border: 1px solid #ccc;">—</td>
-        <td id="ramos-aprobados" style="padding: 10px 16px; border: 1px solid #ccc;">—</td>
-        <td id="porcentaje-avance" style="padding: 10px 16px; border: 1px solid #ccc;">—%</td>
-      </tr>
-    </tbody>
-  </table>
-</div>
+  <!-- Tabla de avance curricular -->
+  <div id="avance" style="margin-top: 40px; display: flex; justify-content: center;">
+    <table style="border-collapse: collapse; border: 1px solid #ccc; font-family: Arial, sans-serif; font-size: 0.95rem;">
+      <thead>
+        <tr style="background-color: #f5f5f5;">
+          <th style="padding: 10px 16px; border: 1px solid #ccc;">Total de Ramos</th>
+          <th style="padding: 10px 16px; border: 1px solid #ccc;">Ramos Aprobados</th>
+          <th style="padding: 10px 16px; border: 1px solid #ccc;">Avance (%)</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td id="total-ramos" style="padding: 10px 16px; border: 1px solid #ccc;">—</td>
+          <td id="ramos-aprobados" style="padding: 10px 16px; border: 1px solid #ccc;">—</td>
+          <td id="porcentaje-avance" style="padding: 10px 16px; border: 1px solid #ccc;">—%</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 
-<!-- Librería para confeti -->
-<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+  <!-- Librería para confeti -->
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 
-<div style="text-align: center; margin-top: 20px;">
-  <button id="toggleTheme" style="padding: 10px 20px; background-color: #333; color: white; border: none; border-radius: 6px; font-weight: bold; cursor: pointer;">
-    Cambiar tema
-  </button>
-</div>
+  <div style="text-align: center; margin-top: 20px;">
+    <button id="toggleTheme" style="padding: 10px 20px; background-color: #333; color: white; border: none; border-radius: 6px; font-weight: bold; cursor: pointer;">
+      Cambiar tema
+    </button>
+  </div>
 
-  <!-- CARGA DE SCRIPTS -->
+  <!-- Carga de scripts -->
   <script src="ramos.js"></script>
   <script src="script.js"></script>
 </body>
